# flask

./: .pre-commit-config.yaml  README.md  flask_app.py  pyproject.toml
templates/: about.html  home.html  layout.html
