[project]
name = "flask_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Arun Nair",email = "arunhl18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker (>=1.9.0,<2.0.0)",
    "cfgv (>=3.4.0,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "identify (>=2.6.12,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "nodeenv (>=1.9.1,<2.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "virtualenv (>=20.31.2,<21.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
